# MolGraphNetwork

./: README.md  example.ipynb  pyproject.toml  requirements.txt
mgnn/: BlockMatrix.py  Graphutils.py  MolGraphNetwork.py  encoder.py  message_net.py
minimal_example_dataset/: 6-31g_2df_p_custom_nwchem.gbs  README.md
minimal_example_dataset/models/: example_model.history
minimal_example_dataset/qm9_isomeres/: names.pkl
minimal_example_dataset/qm9_isomeres/0/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/1/: density.npy  fock.npy  overlap.npy
minimal_example_dataset/qm9_isomeres/10/: density.npy  fock.npy  overlap.npy
minimal_example_dataset/qm9_isomeres/11/: density.npy  fock.npy  overlap.npy  status.pkl
minimal_example_dataset/qm9_isomeres/12/: density.npy  fock.npy  overlap.npy
minimal_example_dataset/qm9_isomeres/13/: density.npy  fock.npy  overlap.npy
minimal_example_dataset/qm9_isomeres/14/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/15/: density.npy  fock.npy  overlap.npy
minimal_example_dataset/qm9_isomeres/16/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/17/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/18/: density.npy  fock.npy  hcore.npy
minimal_example_dataset/qm9_isomeres/19/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/2/: density.npy  fock.npy  overlap.npy
minimal_example_dataset/qm9_isomeres/20/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/21/: density.npy  fock.npy
minimal_example_dataset/qm9_isomeres/22/: density.npy  fock.npy  (+1 more)
(+572 files in other folders)
