[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mgnn"
version = "0.1.0"
description = "Molecular Graph Neural Network for density matrix prediction"
authors = [
    { name="Dein Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "tqdm",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "torch-scatter>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mgnn*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
