[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mgnn"
version = "0.1.0"
description = "Molecular Graph Neural Network for density matrix prediction"
authors = [
    { name="Elias Wachmann", email="elias.wachmann@student.tugraz.at" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch",
    "torch-geometric",
    "torch-scatter",
    "numpy",
    "tqdm",
    "matplotlib",
    "pyscf",
    "quaternion"
]
